# ollama-playground

./: .gitignore  LICENSE  Pipfile  README.md  devbox.json
.github/: copilot-instructions.md
chatbot/: app.py
example/chatbot/: Pipfile  README.md  app.py  devbox.json  pyproject.toml
example/chatbot-gpt/: README.md  app.py
example/rag-pdf/: README.md  pdf-rag.ipynb
