[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "melvinlee",email = "melvinlee@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
